# sol-icp-auth

./: Cargo.toml  README.md  canister_ids.json  dfx.json  package-lock.json  package.json  sol_icp_poc_backend.did
src/sol_icp_poc_backend/: Cargo.toml  sol_icp_poc_backend.did
src/sol_icp_poc_backend/src/: lib.rs
src/sol_icp_poc_frontend/assets/: index.html  main.bundle.js  main.js  package-lock.json  package.json  sol_icp_poc_backend.did  sol_icp_poc_backend.idl.js
