[package]
name = "sol_icp_poc_backend"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.10"
ic-cdk = "0.16.1"
ic-cdk-macros = "0.13.2"
ic-cdk-timers = "0.7.0"
ic-ledger-types = "0.13.0"
ic-stable-structures = "0.6.5"
serde = "1.0"
ed25519-dalek = "2.1.0"
bs58 = "0.5"
sha2 = "0.10"
hex = "0.4"
ic_principal = "0.1.1"