[package]
name = "sol_icp_poc_backend"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.17"
ic-cdk = "0.18.5"
ic-cdk-macros = "0.18.5"
ic-ledger-types = "0.15.0"
ic-stable-structures = "0.7.0"
# Enable derive macros for serde so #[serde(rename = "...")] works.
serde = { version = "1.0", features = ["derive"] }
ed25519-dalek = "2.1.0"
bs58 = "0.5"
sha2 = "0.10"
hex = "0.4"
ic_principal = "0.1.1"
lazy_static = "1.4.0"
base64 = "0.22.1"
